--- a/_data/students/honeybansal9.yml
+++ b/_data/students/honeybansal9.yml
@@ -1,3 +1,3 @@
-name: Coding Blocks Greater Noida 
+name: Honey Bansal
 bio : I am a disco dancer
-github: coding-blocks-gnoida
+github: honeybansal9
